# tekra

./: .gitignore  README.md  pyproject.toml  report.html  report.md
src/tekra3/: crew.py  crew_old.py  main.py
src/tekra3/config/: tasks.yaml
src/tekra3/tools/: sec_tools.py
